k8s-manifests/ingress.yml
# ingress rules for application
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-web-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: my-web-app.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend: 
          service:
            name: go-web-app
            port:
              number: 80
